[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::.*aiohttp_jinja2*",
    "ignore:::.*asyncio*",
    "ignore:::.*concurrent*",
    "ignore:::.*spade*",
    "ignore:::.*aioxmpp*",
]