[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = false

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::.*aiohttp_jinja2*",
    "ignore:::.*asyncio*",
    "ignore:::.*concurrent*",
    "ignore:::.*spade*",
    "ignore:::.*aioxmpp*",
]

[tool.black]
    line-length = 79
    target-version = ["py38"]
    include = '\.pyi?$'

[tool.isort]
    profile = "black"
    multi_line_output = 3
    py_version = 38
    line_length = 79
