[metadata]
name = DoCelu
version = 0.1.1
description = DoCelu.
long_description = file: README.md
classifiers =
    Programming Language :: Python


[options]
packages = find:
include_package_data = True
install_requires =
    spade~=3.2.2
    pre-commit>=2.2.0<3.0.0
    black>=22.10.0<23.0.0
    flake8>=6.0.0<7.0.0
    isort>=5.10.1<6.0.0

python_requires = >=3.8
